2006-02-27  Raja R Harinath  <rharinath@novell.com>

	* configure.in (runtime/etc/mono/{1.0,2.0}/machine.config):
	Fix m4-quoting.

Sat Feb 25 11:53:30 CET 2006 Paolo Molaro <lupus@ximian.com>

	* configure.in: more feature for --enable-minimal flags.

2006-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: define PLATFORM_BSD.

2006-02-17  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am: Avoid installing mint.pc if mint is not compiled.

2006-02-07  Chris Toshok  <toshok@ximian.com>

	* data/net_2_0/Makefile.am (EXTRA_DIST): add web.config
	(mono_DATA): same.

	* data/net_2_0/machine.config: remove the system.web section from
	here.

	* data/net_2_0/web.config: and add it here.

2006-02-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* data/net_2_0/machine.config: Add FtpRequestCreator
	to create new instances of System.Net.FtpWebWebRequest.

2006-02-01  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* libmono.vcproj: Added new files to the VS.NET build.
	* README.vsnet: Updated VS.NET build instructions.

2006-01-26  Chris Toshok  <toshok@ximian.com>

	* data/net_2_0/machine.config: ignore runtime and startup
	sections.

2006-01-25  Chris Toshok  <toshok@ximian.com>

	* data/net_2_0/machine.config: ignore mscorlib,
	system.runtime.remoting, and strongNames sections.

2006-01-25  Chris Toshok  <toshok@ximian.com>

	* data/net_2_0/machine.config: for system.web, add default
	<authorization> section that allows everything.  also, add
	System.Configuration to system.web/compilation/assemblies.

2006-01-23  Chris Toshok  <toshok@ximian.com>

	* data/net_2_0/machine.config: add System.Configuration to the
	list of assemblies in system.web/compilation.

2006-01-23  Martin Baulig  <martin@ximian.com>

	* configure.in: Added configure check whether the Mono Debugger is
	supported on this platform; AC_DEFINE(MONO_DEBUGGER_SUPPORTED) and
	also added a `MONO_DEBUGGER_SUPPORTED' automake conditional.
