@@ -65,6 +65,11 @@
 
 #endif /* _MSC_VER */
 
+#if HAVE_VISIBILITY_HIDDEN
+#define MONO_INTERNAL __attribute__ ((visibility ("hidden")))
+#else
+#define MONO_INTERNAL 
+#endif
 
 #endif /* __UTILS_MONO_COMPILER_H__*/
 
