@@ -1,3 +1,9 @@
+
+Wed Mar 1 12:37:43 CET 2006 Paolo Molaro <lupus@ximian.com>
+
+	* configure.in: added checks for visibility attribute,
+	option to disable generics, disabled options string define.
+
 2006-02-27  Raja R Harinath  <rharinath@novell.com>
 
 	* configure.in (runtime/etc/mono/{1.0,2.0}/machine.config):
